<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTexteDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tewtViewDate" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donneDate" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTexteGroupe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tewtViewGroupe" />

        <TextView
            android:id="@+id/textViewGroupe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donneeGroupe" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTexteLieu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tewtViewLieu" />

        <TextView
            android:id="@+id/textViewLieu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donneeLieu" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTexteHeureDebut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tewtViewDebut" />

        <TextView
            android:id="@+id/textViewHeureDebut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donneeDebut" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTexteHeureFin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tewtViewFin" />

        <TextView
            android:id="@+id/textViewHeureFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donneeFin" />
    </LinearLayout>

</LinearLayout>